--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/backend": "^1.16.1",
     "@clerk/nextjs": "^6.3.0",
+    "@hono/clerk-auth": "^2.0.0",
+    "@hono/zod-validator": "^0.4.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.446.0",
+    "hono": "^4.6.9",
+    "lucide-react": "^0.456.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "react-use": "^17.5.1",
+    "shadcn-ui": "^0.9.3",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
