--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate:pg --schema db/schema.ts --out ./drizzle",
+    "db:migrate": "bun ./scripts/migrate.ts",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/backend": "^1.16.1",
     "@clerk/nextjs": "^6.3.0",
     "@hono/clerk-auth": "^2.0.0",
     "@hono/zod-validator": "^0.4.1",
+    "@neondatabase/serverless": "^0.10.3",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.30.10",
+    "drizzle-zod": "^0.5.1",
     "hono": "^4.6.9",
     "lucide-react": "^0.456.0",
     "next": "14.2.13",
@@ -32,8 +38,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.20.17",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
+    "pg": "^8.13.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
