--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@clerk/nextjs": "^6.3.0",
     "@hono/clerk-auth": "^2.0.0",
     "@hono/zod-validator": "^0.4.1",
+    "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^0.10.3",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tanstack/react-query": "^5.60.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -27,13 +30,17 @@
     "hono": "^4.6.9",
     "lucide-react": "^0.456.0",
     "next": "14.2.13",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.1",
     "react-use": "^17.5.1",
     "shadcn-ui": "^0.9.3",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
